# algo-practice

./: .gitignore  CMakeLists.txt  Makefile  README.md  cses_main_template.cpp  go.mod
bits/: README.md  stdc++.h
lib/include/testutil/: file.hpp
lib/src/: gen_cses_main.cpp  kebab.cpp
lib/src/testutil/: file.cpp
problems/hackerrank/binary-search-tree-insertion/: description.txt
problems/hackerrank/qheap1/: description.txt
problems/hackerrank/quicksort2/: description.txt
problems/hackerrank/tree-height-of-a-binary-tree/: description.txt
problems/leetcode/01-matrix/: description.txt
problems/leetcode/3sum/: description.txt
problems/leetcode/accounts-merge/: description.txt
problems/leetcode/add-binary/: description.txt
problems/leetcode/backspace-string-compare/: description.txt
problems/leetcode/best-time-to-buy-and-sell-stock/: description.txt
problems/leetcode/binary-tree-level-order-traversal/: description.txt
problems/leetcode/binary-tree-maximum-path-sum/: description.txt
problems/leetcode/binary-tree-paths/: description.txt
problems/leetcode/binary-tree-right-side-view/: description.txt
problems/leetcode/binary-tree-vertical-order-traversal/: description.txt
problems/leetcode/bus-routes/: description.txt
problems/leetcode/check-if-a-string-contains-all-binary-codes-of-size-k/: description.txt
problems/leetcode/climbing-stairs/: description.txt
problems/leetcode/clone-graph/: description.txt
problems/leetcode/coin-change/: description.txt
problems/leetcode/combination-sum/: description.txt
problems/leetcode/construct-binary-tree-from-preorder-and-inorder-traversal/: description.txt
problems/leetcode/container-with-most-water/: description.txt
problems/leetcode/convert-binary-search-tree-to-sorted-doubly-linked-list/: description.txt
problems/leetcode/count-complete-tree-nodes/: description.txt
problems/leetcode/course-schedule/: description.txt
problems/leetcode/course-schedule-ii/: description.txt
problems/leetcode/cracking-the-safe/: description.txt
problems/leetcode/design-circular-queue/: description.txt
problems/leetcode/diameter-of-binary-tree/: description.txt
problems/leetcode/employee-free-time/: description.txt
problems/leetcode/evaluate-division/: description.txt
problems/leetcode/evaluate-reverse-polish-notation/: description.txt
problems/leetcode/expressive-words/: description.txt
problems/leetcode/find-all-anagrams-in-a-string/: description.txt
problems/leetcode/flip-equivalent-binary-trees/: description.txt
problems/leetcode/fruit-into-baskets/: description.txt
problems/leetcode/gas-station/: description.txt
problems/leetcode/h-index/: description.txt
problems/leetcode/implement-trie-prefix-tree/: description.txt
problems/leetcode/insert-delete-getrandom-o1/: description.txt
problems/leetcode/insert-interval/: description.txt
problems/leetcode/jump-game/: description.txt  note.md
problems/leetcode/jump-game-ii/: description.txt
problems/leetcode/k-closest-points-to-origin/: description.txt
problems/leetcode/kth-largest-element-in-an-array/: description.txt
problems/leetcode/kth-smallest-element-in-a-bst/: description.txt
problems/leetcode/largest-rectangle-in-histogram/: description.txt
problems/leetcode/license-key-formatting/: description.txt
problems/leetcode/longest-common-subsequence/: description.txt
problems/leetcode/longest-increasing-path-in-a-matrix/: description.txt
problems/leetcode/longest-increasing-subsequence/: description.txt
problems/leetcode/longest-palindromic-substring/: description.txt
problems/leetcode/longest-substring-with-at-most-two-distinct-characters/: description.txt
problems/leetcode/longest-substring-without-repeating-characters/: description.txt
problems/leetcode/longest-valid-parentheses/: description.txt
problems/leetcode/lowest-common-ancestor-of-a-binary-tree/: description.txt
problems/leetcode/lru-cache/: description.txt
problems/leetcode/maximize-the-topmost-element-after-k-moves/: description.txt
problems/leetcode/maximum-depth-of-binary-tree/: description.txt
problems/leetcode/maximum-depth-of-n-ary-tree/: description.txt
problems/leetcode/maximum-frequency-stack/: description.txt
problems/leetcode/maximum-product-of-word-lengths/: description.txt
problems/leetcode/maximum-profit-in-job-scheduling/: description.txt
problems/leetcode/maximum-subarray/: description.txt
problems/leetcode/median-of-two-sorted-arrays/: description.txt
problems/leetcode/merge-k-sorted-lists/: description.txt
problems/leetcode/minimum-area-rectangle/: description.txt
problems/leetcode/minimum-average-difference/: description.txt
problems/leetcode/minimum-cost-to-hire-k-workers/: description.txt
problems/leetcode/minimum-height-trees/: description.txt
problems/leetcode/minimum-time-difference/: description.txt
problems/leetcode/minimum-window-substring/: description.txt
problems/leetcode/missing-number/: description.txt
problems/leetcode/missing-ranges/: description.txt
problems/leetcode/most-stones-removed-with-same-row-or-column/: description.txt
problems/leetcode/multiply-strings/: description.txt
problems/leetcode/n-queens/: description.txt
problems/leetcode/next-closest-time/: description.txt  note.txt
problems/leetcode/ones-and-zeroes/: description.txt
problems/leetcode/palindrome-pairs/: description.txt
problems/leetcode/partition-equal-subset-sum/: description.txt
problems/leetcode/permutations/: description.txt
problems/leetcode/plus-one/: description.txt
problems/leetcode/product-of-array-except-self/: description.txt
problems/leetcode/regular-expression-matching/: description.txt
problems/leetcode/remove-duplicates-from-sorted-array/: description.txt
problems/leetcode/reverse-nodes-in-k-group/: description.txt
problems/leetcode/reverse-vowels-of-a-string/: description.txt
problems/leetcode/robot-room-cleaner/: description.txt
problems/leetcode/rotate-image/: description.txt
scripts/: cpp-format.sh  pre-commit-hook.sh
(+14859 files in other folders)
